# EVM

EVM-master-2/: CMakeLists.txt  IO_buffer.c  IO_buffer.h  cpu.c  cpu.h  draw_interface.c  draw_interface.h  handler.c  handler.h  main.c  signal.c  signal.h
EVM-master-2/MyBigChars/: CMakeLists.txt
EVM-master-2/MyBigChars/include/: MyBigChars.h
EVM-master-2/MyBigChars/src/: MyBigChars.c
EVM-master-2/MyReadKey/: CMakeLists.txt
EVM-master-2/MyReadKey/include/: MyReadKey.h
EVM-master-2/MyReadKey/src/: MyReadKey.c
EVM-master-2/MySimpleComputer/: CMakeLists.txt
EVM-master-2/MySimpleComputer/include/: MySimpleComputer.h
EVM-master-2/MySimpleComputer/src/: MySimpleComputer.c
EVM-master-2/MyTerm/: CMakeLists.txt
EVM-master-2/MyTerm/include/: MyTerm.h
EVM-master-2/MyTerm/src/: MyTerm.c
EVM-master-2/asm/: CMakeLists.txt
EVM-master-2/asm/include/: sat.h
EVM-master-2/asm/src/: main.c  sat.c
EVM-master-2/basic/: CMakeLists.txt
EVM-master-2/basic/include/: basic.h
EVM-master-2/basic/src/: basic.c
EVM-master-2/programm/: t1.bas.sa
